Updated fetch URL to Render backend

--- a/public/report-found.html
+++ b/public/report-found.html
@@ -128,7 +128,7 @@
 
       async function submitReport(data, token) {
         try {
-          const response = await fetch("http://localhost:5000/report-found", {
+          const response = await fetch("https://khoj-backend.onrender.com/report-found", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
