--- a/public/report-lost.html
+++ b/public/report-lost.html
@@ -162,7 +162,7 @@
 
       async function submitReport(data, token) {
         try {
-          const response = await fetch("http://localhost:5000/report-lost", {
+          const response = await fetch("https://khojindemo.onrender.com/report-lost", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
