--- a/public/report-found.html
+++ b/public/report-found.html
@@ -12,9 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-
     <style>
-      #foundLink{
+      #foundLink {
         color: #ffd700;
       }
     </style>
@@ -33,7 +32,7 @@
         <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="about.html"><i class="fas fa-info-circle"></i> About Us</a></li>
         <li><a href="report-lost.html" id="lostLink"><i class="fas fa-user-minus"></i> Report Lost</a></li>
-        <li><a href="report-found.html" id="foundLink" class="home1"><i class="fas fa-user-plus"></i> Report Found</a></li>
+        <li><a href="report-found.html" id="foundLink"><i class="fas fa-user-plus"></i> Report Found</a></li>
         <li><a href="youritem.html"><i class="fas fa-box"></i> Your Items</a></li>
       </ul>
     </nav>
@@ -46,13 +45,12 @@
     <section class="report-form" data-aos="fade-up">
       <h2>Found Item Details</h2>
       <form id="foundItemForm" data-aos="zoom-in" data-aos-delay="200">
-        <input type="text" id="name" name="name" placeholder="Your Name" required />
-        <input type="text" id="contact" name="contact" placeholder="Your Contact" required />
-        <input type="text" id="item" name="item_name" placeholder="Item Name" required />
-        <textarea id="description" name="description" rows="4" placeholder="Description" required></textarea>
-        <input type="text" id="location" name="location" placeholder="Location Found" required />
-        <input type="date" id="date" name="date_found" required />
-        <input type="file" id="image" name="image" accept="image/*" />
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="text" name="contact" placeholder="Your Contact" required />
+        <input type="text" name="item_name" placeholder="Item Name" required />
+        <textarea name="description" rows="4" placeholder="Description" required></textarea>
+        <input type="text" name="location" placeholder="Location Found" required />
+        <input type="date" name="date_found" required />
         <button type="submit">Submit Report</button>
       </form>
     </section>
@@ -102,6 +100,7 @@
           alert("You must be logged in to submit a report.");
           return;
         }
+
         showLoadingSpinner();
         const formData = new FormData(this);
         const data = {
@@ -111,24 +110,10 @@
           description: formData.get("description"),
           location: formData.get("location"),
           date_found: formData.get("date_found"),
-          image_url: null,
         };
-        const file = formData.get("image");
-        if (file) {
-          const reader = new FileReader();
-          reader.readAsDataURL(file);
-          reader.onload = async () => {
-            data.image_url = reader.result;
-            await submitReport(data, token);
-          };
-        } else {
-          await submitReport(data, token);
-        }
-      });
 
-      async function submitReport(data, token) {
         try {
-          const response = await fetch("https://khoj-backend.onrender.com/report-found", {
+          const response = await fetch("https://khojindemo.onrender.com/report-found", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
@@ -136,6 +121,7 @@
             },
             body: JSON.stringify(data),
           });
+
           const result = await response.json();
           alert(result.message);
         } catch (error) {
@@ -143,7 +129,7 @@
         } finally {
           hideLoadingSpinner();
         }
-      }
+      });
     </script>
   </body>
 </html>
