--- a/public/report-lost.html
+++ b/public/report-lost.html
@@ -3,31 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Report lost Item</title>
-    <link
-      rel="icon"
-      type="image/png"
-      href="favicons/favicon_io/favicon-32x32.png"
-    />
+    <title>Report Lost Item</title>
+    <link rel="icon" type="image/png" href="favicons/favicon_io/favicon-32x32.png" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="report-lost2.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-
-    <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
-<style>
-  #lostLink{
-    color: #ffd700;
-  }
-</style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <style>
+      #lostLink {
+        color: #ffd700;
+      }
+    </style>
   </head>
   <body>
     <!-- Loading Spinner -->
@@ -39,128 +28,74 @@
     <nav>
       <div class="logo">
         <a href="index.html"><i class="fas fa-search"></i> KHOJ</a>
-      </div>      
+      </div>
       <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
       <ul class="nav-links">
         <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="about.html"><i class="fas fa-info-circle"></i> About Us</a></li>
         <li><a href="report-lost.html" id="lostLink"><i class="fas fa-user-minus"></i> Report Lost</a></li>
-        <li><a href="report-found.html" id="foundLink"><i class="fas fa-user-plus"></i> Report Found</a></li>
+        <li><a href="report-found.html"><i class="fas fa-user-plus"></i> Report Found</a></li>
         <li><a href="youritem.html"><i class="fas fa-box"></i> Your Items</a></li>
-      </ul>      
+      </ul>
     </nav>
 
     <!-- Hero Section -->
     <header class="hero">
-      <h1>Report a lost Item</h1>
-      <p>
-        Submit the details of the lost item, and we will help you find its
-        owner.
-      </p>
+      <h1>Report a Lost Item</h1>
+      <p>Submit the details of the lost item, and we will help you match it with any found item.</p>
     </header>
 
     <!-- Report Form -->
     <section class="report-form" data-aos="fade-up" data-aos-duration="1000">
-        <h2>Lost Item Details</h2>
-        <form id="lostItemForm" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="800">
-        <input
-          type="text"
-          id="name"
-          name="name"
-          placeholder="Your Name"
-          required
-        />
-        <input
-          type="text"
-          id="contact"
-          name="contact"
-          placeholder="Your Contact"
-          required
-        />
-        <input
-          type="text"
-          id="item"
-          name="item_name"
-          placeholder="Item Name"
-          required
-        />
-        <textarea
-          id="description"
-          name="description"
-          rows="4"
-          placeholder="Description"
-          required
-        ></textarea>
-        <input
-          type="text"
-          id="location"
-          name="location"
-          placeholder="Location lost"
-          required
-        />
+      <h2>Lost Item Details</h2>
+      <form id="lostItemForm" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="800">
+        <input type="text" id="name" name="name" placeholder="Your Name" required />
+        <input type="text" id="contact" name="contact" placeholder="Your Contact" required />
+        <input type="text" id="item" name="item_name" placeholder="Item Name" required />
+        <textarea id="description" name="description" rows="4" placeholder="Description" required></textarea>
+        <input type="text" id="location" name="location" placeholder="Location lost" required />
         <input type="date" id="date" name="date_lost" required />
-        <input type="file" id="image" name="image" accept="image/*" />
         <button type="submit">Submit Report</button>
       </form>
     </section>
 
     <footer>
-        <div class="footer-content">
-          <p>&copy; 2025 <strong>KHOJ</strong> — Reconnecting India with Trust ❤️</p>
-          <p>
-            <a href="about.html">About Us</a> |
-            <a href="contact.html">Contact</a> |
-            <a href="https://theyouthcompany.in/product/khoj/" target="_blank">Invest</a>
-          </p>
-        </div>
-      </footer>
-      
+      <div class="footer-content">
+        <p>&copy; 2025 <strong>KHOJ</strong> — Reconnecting India with Trust ❤️</p>
+        <p>
+          <a href="about.html">About Us</a> |
+          <a href="contact.html">Contact</a> |
+          <a href="https://theyouthcompany.in/product/khoj/" target="_blank">Invest</a>
+        </p>
+      </div>
+    </footer>
 
     <script>
       function toggleMenu() {
-        const menu = document.getElementById("navMenu");
+        const menu = document.querySelector(".nav-links");
         menu.classList.toggle("active");
       }
 
-      document
-        .getElementById("lostItemForm")
-        .addEventListener("submit", async function (event) {
-          event.preventDefault();
+      document.getElementById("lostItemForm").addEventListener("submit", async function (event) {
+        event.preventDefault();
 
-          const token = localStorage.getItem("token");
-          if (!token) {
-            alert("You must be logged in to submit a report.");
-            return;
-          }
+        const token = localStorage.getItem("token");
+        if (!token) {
+          alert("You must be logged in to submit a report.");
+          return;
+        }
 
-          // Show the loading spinner
-          document.getElementById("loadingSpinner").style.display = "flex";
+        // Show the loading spinner
+        document.getElementById("loadingSpinner").style.display = "flex";
 
-          const formData = new FormData(this);
-          const data = {
-            name: formData.get("name"),
-            contact: formData.get("contact"),
-            item_name: formData.get("item_name"),
-            description: formData.get("description"),
-            location: formData.get("location"),
-            date_lost: formData.get("date_lost"),
-            image_url: null,
-          };
+        const formData = new FormData(this);
+        const data = {
+          item_name: formData.get("item_name"),
+          description: formData.get("description"),
+          location: formData.get("location"),
+          date_lost: formData.get("date_lost"),
+        };
 
-          const file = formData.get("image");
-          if (file) {
-            const reader = new FileReader();
-            reader.readAsDataURL(file);
-            reader.onload = async () => {
-              data.image_url = reader.result;
-              await submitReport(data, token);
-            };
-          } else {
-            await submitReport(data, token);
-          }
-        });
-
-      async function submitReport(data, token) {
         try {
           const response = await fetch("https://khojindemo.onrender.com/report-lost", {
             method: "POST",
@@ -176,14 +111,13 @@
         } catch (error) {
           alert("Something went wrong. Please try again.");
         } finally {
-          // Hide the loading spinner after response
           document.getElementById("loadingSpinner").style.display = "none";
         }
-      }
+      });
 
       document.addEventListener("DOMContentLoaded", () => {
-        showLoadingSpinner(); // Show spinner when the page loads
-        setTimeout(hideLoadingSpinner, 1000); // Hide spinner after 1 sec (adjust timing if needed)
+        showLoadingSpinner();
+        setTimeout(hideLoadingSpinner, 1000);
       });
 
       function showLoadingSpinner() {
@@ -194,22 +128,16 @@
         document.getElementById("loadingSpinner").style.display = "none";
       }
 
-      // Attach event listener to all navbar links to show the spinner
       document.querySelectorAll("nav a").forEach((link) => {
         link.addEventListener("click", () => {
           showLoadingSpinner();
         });
       });
-
-      // Fix the hamburger menu toggle
-      function toggleMenu() {
-        document.querySelector(".nav-links").classList.toggle("active");
-      }
     </script>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-    
   </body>
 </html>
