New Updated Frontend

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KHOJ - India's Lost & Found</title>
+    <title>RECLO - India's Lost & Found</title>
     <!-- Meta Description (SEO) -->
     <meta
       name="description"
@@ -151,7 +151,7 @@
   <body>
     <nav>
         <div class="logo">
-          <a href="index.html"><i class="fas fa-search"></i> KHOJ</a>
+          <a href="index.html"><i class="fas fa-search"></i> RECLO</a>
         </div>      
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul class="nav-links">
@@ -187,7 +187,7 @@
     </section>
 
     <section class="features" data-aos="fade-up">
-        <h2>Why Use KHOJ?</h2>
+        <h2>Why Use RECLO?</h2>
         <div class="features-grid">
           <div class="feature-box" data-aos="flip-left">
             <i class="fas fa-bolt"></i>
@@ -237,13 +237,25 @@
             <img src="Rewant2.jpg" alt="Team Member" />
             <h3>Rewant Anand</h3>
             <h4>IIITD</h4>
-            <p>Team Leader</p>
+            <p>Team RECLO</p>
           </div>
           <div class="member">
-            <img src="Tanish1.jpg" alt="Team Member" />
-            <h3>Tanish Bachhas</h3>
-            <h4>IIITD</h4>
-            <p>Team Organiser</p>
+            <img src="vidit.jpg" alt="Team Member" />
+            <h3>Vidit Aggarwal</h3>
+            <h4>IIT Roorkee</h4>
+            <p>Team RECLO</p>
+          </div>
+          <div class="member">
+            <img src="samyak.jpg" alt="Team Member" />
+            <h3>Samyak</h3>
+            <h4>IIT Roorkee</h4>
+            <p>Team RECLO</p>
+          </div>
+          <div class="member">
+            <img src="dhano.jpg" alt="Team Member" />
+            <h3>Dhwanit Shah</h3>
+            <h4>BPIT-Pune</h4>
+            <p>Team RECLO</p>
           </div>
         </div>
   
@@ -255,7 +267,7 @@
       </section>
 
       <div class="khoj-chatbot">
-        <div class="khoj-chat-header">KHOJ Chat Support</div>
+        <div class="khoj-chat-header">RECLO Chat Support</div>
         <div class="khoj-chat-messages" id="chatMessages"></div>
         <div class="khoj-chat-input">
           <input type="text" id="chatInput" placeholder="Type your message..." />
