--- a/public/report-found.html
+++ b/public/report-found.html
@@ -25,7 +25,7 @@
 
     <nav>
       <div class="logo">
-        <a href="index.html"><i class="fas fa-search"></i> KHOJ</a>
+        <a href="index.html"><i class="fas fa-search"></i> RECLO</a>
       </div>
       <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
       <ul class="nav-links">
@@ -57,7 +57,7 @@
 
     <footer>
       <div class="footer-content">
-        <p>&copy; 2025 <strong>KHOJ</strong> — Reconnecting India with Trust ❤️</p>
+        <p>&copy; 2025 <strong>RECLO</strong> — Reconnecting India with Trust ❤️</p>
         <p>
           <a href="about.html">About Us</a> |
           <a href="contact.html">Contact</a> |
