--- a/public/report-lost.html
+++ b/public/report-lost.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav>
       <div class="logo">
-        <a href="index.html"><i class="fas fa-search"></i> KHOJ</a>
+        <a href="index.html"><i class="fas fa-search"></i> RECLO</a>
       </div>
       <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
       <ul class="nav-links">
