Fixed color scheme

--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - KHOJ</title>
+  <title>About Us - RECLO</title>
   <link rel="icon" type="image/png" href="favicons/favicon_io/favicon-32x32.png">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
@@ -17,7 +17,7 @@
 <body>
   <nav>
     <div class="logo">
-      <a href="index.html"><i class="fas fa-search"></i> KHOJ</a>
+      <a href="index.html"><i class="fas fa-search"></i> RECLO</a>
     </div>
     <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
     <ul class="nav-links">
@@ -68,7 +68,7 @@
 
   <footer>
     <div class="footer-content">
-      <p>&copy; 2025 <strong>KHOJ</strong> — Reconnecting India with Trust ❤️</p>
+      <p>&copy; 2025 <strong>RECLO</strong> — Reconnecting India with Trust ❤️</p>
       <p>
         <a href="about.html">About Us</a> |
         <a href="contact.html">Contact</a> |
