--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,10 @@
       background-color: #ffc947;
       color: black;
     }
+    nav {
+  position: relative;
+  z-index: 10000; 
+}
     </style>
   </head>
   <body>
