your next update message

--- a/public/about.html
+++ b/public/about.html
@@ -30,13 +30,13 @@
   </nav>
 
   <header class="hero" data-aos="fade">
-    <h1>Welcome to KHOJ</h1>
+    <h1>Welcome to RECLO</h1>
     <p>Your trusted companion in finding what matters most.</p>
   </header>
 
   <section class="content-section" data-aos="fade-up">
     <h2>Our Mission</h2>
-    <p>KHOJ is revolutionizing the way India handles lost and found. We're building the nation's first centralized digital platform for reporting and reclaiming lost items — from metro stations to shopping malls.</p>
+    <p>RECLO is revolutionizing the way India handles lost and found. We're building the nation's first centralized digital platform for reporting and reclaiming lost items — from metro stations to shopping malls.</p>
   </section>
 
   <section class="content-section" data-aos="fade-left">
@@ -62,7 +62,7 @@
     <h2>Support the Movement</h2>
     <p>Be a part of India’s first national Lost & Found platform. Help us expand, innovate and reach every corner of the country.</p>
     <a href="https://theyouthcompany.in/product/khoj/" target="_blank">
-      <button class="invest-btn">INVEST IN KHOJ</button>
+      <button class="invest-btn">INVEST IN RECLO</button>
     </a>
   </section>
 
