your next update message

--- a/public/index.html
+++ b/public/index.html
@@ -188,9 +188,10 @@
       <h1>India's Central Lost & Found Network</h1>
       <p>Built to reconnect people with their lost belongings — with purpose and tech.</p>
       <div class="cta-buttons">
-        <button class="btn">Report Lost</button>
-        <button class="btn">Report Found</button>
-      </div>
+  <a href="report-lost.html" class="btn">Report Lost</a>
+  <a href="report-found.html" class="btn">Report Found</a>
+</div>
+
     </header>
 
     <section class="slider">
